feat: allow tokens to be made with ethr or nft did (#93)
* feat: allow tokens to be made with ethr or nft did

* feat: move privilage mapping to tokenclaims
